# smart-folder

./: README.md  package.json  setup.cfg
scripts/: smart-folder
