# https://pypi.org/project/setupcfg-generator/
[metadata]
name = smart-folder
version = 2019.4.29
url = https://github.com/looking-for-a-job/smart-folder
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = folder

[options]
install_requires = 
	setuptools
scripts = 
	scripts/smart-folder
